[gd_scene load_steps=2 format=2]

[ext_resource path="res://Menu.gd" type="Script" id=1]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 3.0
margin_top = 130.0
margin_right = 66.0
margin_bottom = 222.0
rect_scale = Vector2( 0.5, 0.5 )

[node name="Start" type="Button" parent="VBoxContainer"]
margin_right = 63.0
margin_bottom = 20.0
text = "Start"

[node name="Load" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 63.0
margin_bottom = 44.0
text = "Start"

[node name="Options" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 63.0
margin_bottom = 68.0
text = "Options"

[node name="Quit" type="Button" parent="VBoxContainer"]
margin_top = 72.0
margin_right = 63.0
margin_bottom = 92.0
text = "Exit"

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="VBoxContainer/Load" to="." method="_on_Load_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
